--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "glob": "^10.3.10",
     "sass": "^1.72.0",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vite-plugin-lib-inject-css": "^2.0.0"
   }
 }
