--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "first-components-library",
   "private": false,
   "description": "a test to publish component library with vite",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
   "exports": {
@@ -15,6 +15,9 @@
   "files": [
     "/dist"
   ],
+  "sideEffects": [
+    "**/*.css"
+  ],
   "publishConfig": {
     "access": "public"
   },
@@ -22,14 +25,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepublishOnly": "npm run build"
   },
-  "dependencies": {
-    "path": "^0.12.7",
+  "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "path": "^0.12.7",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
@@ -40,6 +44,8 @@
     "glob": "^10.3.10",
     "sass": "^1.72.0",
     "vite": "^5.1.6",
-    "vite-plugin-lib-inject-css": "^2.0.0"
+    "vite-plugin-lib-inject-css": "^2.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
