--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "first-components-library",
   "private": false,
   "description": "a test to publish component library with vite",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "dist/index.umd.js",
   "module": "dist/index.es.js",
   "exports": {
@@ -26,14 +26,24 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "path": "^0.12.7",
+    "@chromatic-com/storybook": "^1.2.23",
+    "@storybook/addon-essentials": "^8.0.1",
+    "@storybook/addon-interactions": "^8.0.1",
+    "@storybook/addon-links": "^8.0.1",
+    "@storybook/addon-onboarding": "^8.0.1",
+    "@storybook/blocks": "^8.0.1",
+    "@storybook/react": "^8.0.1",
+    "@storybook/react-vite": "^8.0.1",
+    "@storybook/test": "^8.0.1",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
@@ -41,11 +51,15 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-storybook": "^0.8.0",
     "glob": "^10.3.10",
-    "sass": "^1.72.0",
-    "vite": "^5.1.6",
-    "vite-plugin-lib-inject-css": "^2.0.0",
+    "path": "^0.12.7",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.72.0",
+    "storybook": "^8.0.1",
+    "vite": "^5.1.6",
+    "vite-plugin-lib-inject-css": "^2.0.0"
   }
 }
