Refactor Vite config and increment package version
Changes include refactoring of the Vite configuration to include revised format, ignore copying public directory, and update rollup external. The package.json version was also incremented to 0.0.8 to reflect these adjustments. Main module entry point has been redirected to lib/main.js.

--- a/package.json
+++ b/package.json
@@ -2,16 +2,10 @@
   "name": "first-components-library",
   "private": false,
   "description": "a test to publish component library with vite",
-  "version": "0.0.3",
-  "main": "dist/index.umd.js",
-  "module": "dist/index.es.js",
-  "exports": {
-    ".": {
-      "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
-    },
-    "./styles": "./dist/style.css"
-  },
+  "version": "0.0.8",
+  "type": "module",
+  "main": "dist/main.js",
+
   "files": [
     "/dist"
   ],
